# 9009_test

./: CMakeLists.txt  k7_spi.c  k7_spi.h  main.c  main.h  readme.md  set9009.c  说明.txt
YXW9009-API-RISCV-V2.0/API/devices/yxw_plat/src/: firmware.h  yxw_agc.c  yxw_agc.h  yxw_agc_types.h  yxw_cals.c  yxw_cals.h  yxw_cals_types.h  yxw_config.c  yxw_config.h  yxw_config_types.h  yxw_data_types.h  yxw_error.c  yxw_error.h  yxw_error_types.h  yxw_gpio.c  yxw_gpio.h  yxw_gpio_types.h  yxw_hal.c  yxw_hal.h  yxw_hopping.c  yxw_hopping.h  yxw_hopping_types.h  yxw_info.c  yxw_info.h  yxw_init.c  yxw_init.h  yxw_init_types.h  yxw_jesd204b.c  yxw_jesd204b.h  yxw_jesd204b_types.h  yxw_otp.c  yxw_otp.h  yxw_otp_types.h  yxw_plat_hal.c  yxw_plat_hal.h  yxw_plat_hal_types.h  yxw_radio.c  yxw_radio.h  yxw_radio_types.h  yxw_reg_ana.h  (+11 more)
cmk/: CMakeCache.txt  Makefile  cmake_install.cmake  init9009_guochan  set9009
